--- a/src/Componetns/UserProfilecard/Contact.module.css
+++ b/src/Componetns/UserProfilecard/Contact.module.css
@@ -1,4 +1,3 @@
-
 :root {
   /* Colours */
   --color-text: #fff;
@@ -8,63 +7,88 @@
   --color-bg: #04152d;
 }
 .container {
-    color: var(--color-text);
-    background-color: var(--color-secondary);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
-    padding: 58px 10%;
-    gap: 10px;
+  color: var(--color-text);
+  background-color: var(--color-secondary);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
+  padding: 58px 10%;
+  gap: 10px;
+}
+
+.text h2 {
+  font-size: 80px;
+  font-weight: 700;
+  letter-spacing: 4px;
+  position: relative;
+}
+
+.text p {
+  font-size: 40px;
+  font-weight: 400;
+  letter-spacing: 2px;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  list-style: none;
+  gap: 26px;
+}
+
+.link {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+
+.link a {
+  color: var(--color-text);
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+}
+h6 {
+  font-size: x-large;
+  font-family: "Raleway", system-ui;
+  position: absolute;
+  margin-top: 250px;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    flex-direction: column;
+    gap: 23px;
   }
-  
-  .text h2 {
-    font-size: 80px;
-    font-weight: 700;
-    letter-spacing: 4px;
-  }
-  
-  .text p {
-    font-size: 40px;
-    font-weight: 400;
-    letter-spacing: 2px;
-  }
-  
-  .links {
+
+  .text {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    list-style: none;
-    gap: 26px;
-  }
-  
-  .link {
-    display: flex;
     align-items: center;
-    gap: 25px;
   }
-  
+  .text h2 {
+    font-size: 60px;
+    margin-bottom: 10px;
+  }
+
+  .links {
+    align-items: center;
+  }
   .link a {
-    color: var(--color-text);
-    text-decoration: none;
-    font-size: 30px;
-    font-weight: 400;
-    letter-spacing: 1.5px;
+    font-size: 20px;
   }
-  
-  @media screen and (max-width: 830px) {
-    .container {
-      flex-direction: column;
-      gap: 23px;
-    }
-  
-    .text {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .links {
-      align-items: center;
-    }
+  .text p {
+    font-size: 20px;
+    letter-spacing: normal;
+    margin-top: 10px;
+    margin-left: 20px;
   }
+  h6{
+    font-size: large;
+    margin-top: 450px;
+    margin-left: 60px;
+  }
+}
