--- a/src/Componetns/UserProfilecard/UserProfilecrd.css
+++ b/src/Componetns/UserProfilecard/UserProfilecrd.css
@@ -52,22 +52,29 @@
   display: block;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   .nav-links {
     display: none;
     flex-direction: column;
     position: absolute;
     top: 60px;
     right: 2rem;
-    background-color: rgb(225, 225, 225, 0.1);
-    box-shadow: 0 2px 5px rgb(8, 6, 6);
-    z-index: 2;
+    background-color:#ff004f;
+    box-shadow: 0 2px 5px rgb(228, 224, 224);
+    z-index: 5;
     backdrop-filter: blur(15px);
     border-radius: 10px;
     overflow: hidden;
-    width: 300px;
+    width: 200px;
     cursor: pointer;
   }
+.bg22{
+  height: 500px;
+  width: 400px;
+  z-index: 0;
+  position: static;
+}
+
  
   .nav-links.open {
     display: flex;
@@ -81,6 +88,10 @@
   }
   .wep{
     z-index: 3;
+    position: static;
+  }
+  .container{
+    width: 100%;
   }
 
 }
@@ -135,7 +146,7 @@ a:hover {
   margin-top: 200px;
   font-size: x-large;
   margin-left: 50px;
-  z-index: 1;
+  z-index: 4;
   color: rgba(240, 240, 242, 0.795);
   
 }
